# cub3d

./: CMakeLists.txt  Makefile  ToDo.txt  main.c  map.cub  norm.sh
game/: ft_game.h  img_f.c  motion.c  ray_cast.c  screen.c  sprites.c  srcs.c
libft/: Makefile  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_hex_itoa.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_split.c  ft_strchr.c  ft_strdup.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  ft_strncmp.c  ft_strnstr.c  ft_strrchr.c  ft_strtrim.c  ft_substr.c  ft_tolower.c  ft_toupper.c  ft_uitoa.c  libft.h
libmlx_lin/: Makefile  Makefile.mk  mlx_int_wait_first_expose.c  mlx_set_font.c
libmlx_mac/: mlx.h  mlx_int.h  mlx_new_window.h
linminilibx/: mlx_destroy_display.c
parser/: ft_parser.h  parser.c
parser/check_map/: check_valid.c
parser/gnl/: get_next_line.c  get_next_line.h  get_next_line_utils.c
parser/srcs/: cheakers.c  ft_header.c  get_map.c  get_player.c
textures/: barrel.xpm  glass.xpm
