cmake_minimum_required(VERSION 3.17)
project(desausag C)

set(CMAKE_C_STANDARD 99)

file(GLOB LIBFILES libft/*.c)
add_library(LibFT STATIC ${LIBFILES})
add_executable(desausag main.c parser/parser.c parser/srcs/ft_header.c parser/gnl/get_next_line.c parser/check_map/check_valid.c)
target_link_libraries(desausag LibFT)
if (APPLE)
    target_link_libraries(desausag ${CMAKE_SOURCE_DIR}/minilibx/libmlx.a)
    target_link_libraries(desausag "-framework OpenGL")
    target_link_libraries(desausag "-framework Appkit")
endif(APPLE)
if (UNIX)
    target_link_libraries(desausag ${CMAKE_SOURCE_DIR}/linminilibx/libmlx_Linux.a)
    target_link_libraries(desausag "-lXext")
    target_link_libraries(desausag "-lX11")
    target_link_libraries(desausag "-lm")
    target_link_libraries(desausag "-lz")
endif(UNIX)
